# morning_stock_screener

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
specs/: IMPLEMENTATION_PLAN.md  PROJECT_PLAN.md
src/: __init__.py  main.py
src/agents/: __init__.py  base.py
src/config/: __init__.py  settings.py
src/llm/: __init__.py  base.py  openai_wrapper.py
src/models/: __init__.py  email.py  llm.py  market.py  stock.py
src/testing/: __init__.py  chat_client.py  serper_test_client.py
src/tests/: __init__.py  test_llm.py  test_models.py
src/tools/: __init__.py  base.py  google_serper.py  search_registry.py
tests/: __init__.py
tests/integration/: test_google_serper_integration.py
tests/unit/: test_base_agent.py  test_base_tool.py  test_google_serper.py  test_llm.py  test_models.py  test_search_registry.py
